--- a/aboly.html
+++ b/aboly.html
@@ -714,7 +714,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p><a href="#zixia">子夏</a>曰：“贤贤易色；事父母，能竭其力；事君，能致其身；与朋友交，言而有信。虽曰未学，吾必谓之学矣。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
-<p><a id="xianxianyise"></a><span class="lyterm">贤贤易色</span>：重贤轻色。第一个<span class="lyterm">贤</span>是动词，以……为贤，尊崇，重视，value，honor；第二个是名词，德行才能，virtue。<span class="lyexample"><span>【例】</span><span><a href="#11.16" class="lyref">11.16</a> <span class="lyq">师与商也孰贤？</span><a href="#6.11" class="lyref">6.11</a> <span class="lyq">贤哉回也！</span>《三国志·魏书·武文世王公》裴松之注引魏宗室曹冏（<span class="lypinyin">jiǒng</span>）上书：<span class="lyq">古之王者，必建同<a href="#xingshi">姓</a>以明亲亲，必树异姓以明贤贤。……非贤无与兴功，非亲无与辅治。</span>（建：指分封。）《史记·梁孝王世家》：<span class="lyq"><a href="#shangchao">殷</a>道尊尊，<a href="#zhouchao">周</a>道<a href="#qinqin">亲亲</a>。</span></span></span></p>
+<p><a id="xianxianyise"></a><span class="lyterm">贤贤易色</span>：重贤轻色。第一个<span class="lyterm">贤</span>是动词，以……为贤，尊崇，重视，value，honor；第二个是名词，德行才能，virtue。<span class="lyexample"><span>【例】</span><span><a href="#4.17" class="lyref">4.17</a> <span class="lyq">见贤思齐</span>。《三国志·魏书·武文世王公》裴松之注引魏宗室曹冏（<span class="lypinyin">jiǒng</span>）上书：<span class="lyq">古之王者，必建同<a href="#xingshi">姓</a>以明<a href="#qinqin">亲亲</a>，必树异姓以明贤贤。……非贤无与兴功，非亲无与辅治。</span>（建：指分封。）类似的用法如《史记·梁孝王世家》：<span class="lyq"><a href="#shangchao">殷</a>道尊尊，<a href="#zhouchao">周</a>道亲亲。</span></span></span></p>
 <p><a id="xian2"></a>“贤”字从贝，本义为财富多，又泛指好。用于比较，表示胜（过），优（于）。用于人，表示才能佳，德行优。东汉许慎的《说文解字》就解释为<span class="lyq">多才也</span>。《三国志·魏书·武帝纪》载，建安十五年（210年）春，曹操颁布《求贤令》，明言天下未定，<span class="lyq">唯才是举</span>，不论出身与品行。但在《论语》中，仅凭才能出众，是称不起“贤人”的，随着儒学主流地位的确立，<a href="#de2">德</a>成为贤的必要部分。《孟子·公孙丑上》推崇<span class="lyq">贤者在位，能者在职</span>；南朝编著的《玉篇》将贤解释为<span class="lyq">有善行也</span>；《宋史·叶梦得传》引叶梦得言：<span class="lyq">贤者，有德之称；能者，有才之称。故<a href="#xianwang">先王</a>常使德胜才，不使才胜德。</span>《大戴礼记·哀公问五义》中，贤人被排在<a href="#junzi">君子</a>之前、<a href="#sheng4">圣人</a>之后。近代选拔干部，过多注重思想可靠，忽视业务能力，也许是这个古老理念的流弊。</p>
 <p>中国中央电视台2002年7月的《<a href="http://v.youku.com/v_show/id_XNjEwNDI3NzI" class="lyurl" target="_blank">对话</a>》节目中，陈章良（时任北京大学副校长）与李开复（时任微软公司全球副总裁）作为人才的供需两方，讨论了人才的首选标准、人品应该谁负责等话题，可以作为评价“贤”的现代版参考。阅读后文时，还可以留意贤与<a href="#ren2">仁</a>的区别。</p>
 <p><a id="yi4g"></a><span class="lyterm">易</span>：动词，轻视。<span class="lyexample"><span>【例】</span><span>《史记·高祖本纪》：<span class="lyq">高祖为亭长，素易诸吏。</span></span></span><span class="lyterm">色</span>：美貌。</p>
@@ -916,7 +916,7 @@ img.characterimg {
 <div class="lyblobannotation">
 <ul class="lyblobitemize">
 <li><p><span class="lyterm">政</span>：禁令，法规。</p></li>
-<li><p><a id="qi2b"></a><span class="lyterm">齐</span>：使整齐一致，引申为整治，管束。<span class="lyexample"><span>【例】</span><span>法家大成之作《韩非子·八经》说：<span class="lyq">设法度以齐民，信赏罚以尽民能。</span>另外，“齐民”还可以作名词，表示平民，齐就是同等。北魏贾思勰的农业技术名著《齐民要术》，命名有双关之意。</span></span></p></li>
+<li><p><a id="qi2b"></a><span class="lyterm">齐</span>：使整齐一致，引申为整治，管束。《说文解字》解释其本义为：<span class="lyq">禾麦吐穗上平也，象形。</span><span class="lyexample"><span>【例】</span><span>法家大成之作《韩非子·八经》说：<span class="lyq">设法度以齐民，信赏罚以尽民能。</span>另外，“齐民”还可以作名词，表示平民，齐就是同等。例如北魏贾思勰的农业技术名著《齐民要术》，命名就有双关之意。</span></span></p></li>
 <li><p><span class="lyterm">免</span>：指免于犯罪。后文还有 <a href="#6.16" class="lyref">6.16</a> <span class="lyq">免于今之世</span>，<a href="#6.19" class="lyref">6.19</a> <span class="lyq">罔之生也幸而免</span>，<a href="#8.3" class="lyref">8.3</a> <span class="lyq">吾知免夫</span>，都要根据上下文具体解读。<span class="lyseealso"><span>【参】</span><span>《史记·酷吏列传》：<span class="lyq">法令者治之具，而非制治清浊之源也。</span>（具：工具，手段。）</span></span></p></li>
 <li><p><a id="chi3a"></a><span class="lyterm">耻</span>：羞惭心，耻辱感。其本字为“恥”，会意为心中羞惭使耳朵赤热。<span class="lyseealso"><span>【参】</span><span>《中庸》：<span class="lyq">好学近乎知，力行近乎仁，知耻近乎勇。知斯三者，则知所以<a href="#xiushen">修身</a>；知所以修身，则知所以治人；知所以治人，则知所以治天下国家矣。</span></span></span></p></li>
 <li><p><span class="lyterm">格</span>：纠正。<span class="lyexample"><span>【例】</span><span>《尚书·周书·冏命》（伪）：<span class="lyq"><a href="#sheng2a">绳</a><a href="#qian1">愆</a>纠谬，格其非心。</span>（非心：邪<a href="#pi4">僻</a>之心。）</span></span><span class="lyseealso"><span>【参】</span><span>《孟子·尽心上》：<span class="lyq">善政不如善教之得民也。善政民畏之，善教民爱之。善政得民财，善教得民心。</span></span></span></p></li>
@@ -1747,7 +1747,7 @@ img.characterimg {
 <a id="4.17"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#4.17">4.17</a></div>
 <div class="lybloboriginaltext"><p>子曰：“见贤思齐焉，见不贤而内自省也。”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">思齐</span>：想要（与贤）看齐。</p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">思<a href="#qi2b">齐</a></span>：想要（与<a href="#xian2">贤</a>）看齐。</p></li></ul></div>
 </div>
 <a id="4.18"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#4.18">4.18</a></div>
@@ -2244,7 +2244,10 @@ img.characterimg {
 <a id="6.11"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#6.11">6.11</a></div>
 <div class="lybloboriginaltext"><p>子曰：“贤哉<a href="#yanhui">回</a>也！一箪食，一瓢饮，在陋巷，人不堪其忧，回也不改其乐。贤哉回也！”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">箪</span>（<span class="lypinyin">dān</span>）：古代盛饭食用的竹器。<span class="lyterm">饮</span>：水。后来有成语“箪食瓢饮”，形容人安心于物质简朴（而精神富足）的生活。</p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize">
+<li><p><span class="lyterm">箪</span>（<span class="lypinyin">dān</span>）：古代盛饭食用的竹编容器。<span class="lyterm">饮</span>：水。后来有成语“箪食瓢饮”，形容人安心于物质简朴（而精神富足）的生活。</p></li>
+<li><p><span class="lyterm">在陋巷</span>：指住在偏僻寒酸的地方。<a id="lou4"></a><span class="lyterm">陋</span>：狭小粗劣，其本义是房屋鄙小仅能容身。<span class="lyexample"><span>【例】</span><span>唐代刘禹锡有名篇《陋室铭》。</span></span></p></li>
+</ul></div>
 </div>
 <a id="6.12"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#6.12">6.12</a></div>
@@ -3018,7 +3021,7 @@ img.characterimg {
 <p><span class="lyterm">侗</span>（<span class="lypinyin">tóng</span>）：通“僮”，儿童，引申为幼稚无知。多用于人名。</p>
 <p><a id="yuan4"></a><span class="lyterm">愿</span>：质朴恭谨，这是其本义。<span class="lyexample"><span>【例】</span><span>《后汉书·刘宠传》：<span class="lyq">山民愿朴，乃有白首不入市井者。</span></span></span></p>
 </li>
-<li><p><span class="lyterm">悾悾</span>（<span class="lypinyin">kōng</span>）：诚恳的样子，这里是指表面现象。</p></li>
+<li><p><a id="kongkong"></a><span class="lyterm">悾悾</span>（<span class="lypinyin">kōng</span>）：诚恳的样子，这里是指表面现象。</p></li>
 </ul></div>
 </div>
 <a id="8.17"></a><div class="lyblob">
@@ -3170,7 +3173,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“吾有知乎哉？无知也。有鄙夫问于我，空空如也，我叩其两端而竭焉。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="bifu"></a><span class="lyterm">鄙夫</span>：乡下人。按周制，王城<a href="#ye3">郊外</a> 500家为<span class="lyterm">鄙</span>。</p></li>
-<li><p><span class="lyterm">空空如也</span>：指这个乡下人什么都不懂。也有认为<span class="lyterm">空空</span>通“悾悾”（<span class="lypinyin">kōng</span>），即（这个乡下人求教时）诚恳的样子，亦通。还有根据开头的话，认为“空空如也”也是孔子的自谦之词，但后面再加“我”就有些别扭了。</p></li>
+<li><p><span class="lyterm">空空如也</span>：指这个乡下人什么都不懂。也有认为<span class="lyterm">空空</span>通<a href="#kongkong">悾悾</a>，即（这个乡下人求教时）诚恳的样子，亦通。还有根据开头的话，认为“空空如也”也是孔子的自谦之词，但后面再加“我”就有些别扭了。</p></li>
 <li><p><span class="lyterm">叩其两端而竭焉</span>：问清楚问题的来龙去脉就全明白了。<span class="lyterm">叩</span>：敲击，引申为探询，询问。<span class="lyterm">两端</span>：指问题的正反两方面，始末缘由。<span class="lyterm">竭</span>：穷尽，指探究到底，弄得水落石出。这是孔子<a href="#9.11">循循善诱</a>的教学特色。</p></li>
 </ul></div>
 </div>
@@ -3244,8 +3247,8 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#9.14">9.14</a></div>
 <div class="lybloboriginaltext"><p>子欲居九夷。或曰：“陋，如之何？”子曰：“君子居之，何陋之有？”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">九<a href="#yidihuaxia">夷</a></span>：东方少数民族居住的地区，对应于现代山东、江苏的沿海一带。打算移居的原因，也许和 <a href="#5.7" class="lyref">5.7</a>  相同。</p></li>
-<li><p><a id="helouzhiyou"></a>说<span class="lyterm">何陋之有</span>，《四书集注》认为是能够移风易俗：<span class="lyq">君子所居则<a href="#hua4">化</a>。</span>也可以理解为修养达到了<a href="#4.10">无适无莫</a>、<a href="#18.8">无可无不可</a>的自得境界。<span class="lyseealso"><span>【参】</span><span>《中庸》：<span class="lyq">君子素其位而行，不愿乎其外。素富贵，行乎富贵；素贫贱，行乎贫贱；素<a href="#yidihuaxia">夷狄</a>，行乎夷狄；素患难，行乎患难——君子无入而不自得焉。在上位不陵下，在下位不援上，正己而不求于人，则无怨。上不怨天，下不<a href="#you2a">尤</a>人。故君子居易以<a href="#si4a">俟</a>命，小人行险以徼幸。</span>（素：本，据。<a id="ling2"></a>陵：欺侮，侵犯。援：攀附。居易：守常。徼（<span class="lypinyin">jiǎo</span>）幸：同“侥幸”。）</span></span></p></li>
+<li><p><span class="lyterm">九<a href="#yidihuaxia">夷</a></span>：东方少数民族居住的地区，对应于现代山东、江苏的沿海一带，可参考《三国志·魏书·东夷传》、《后汉书·东夷列传》。孔子打算移居的原因，也许和 <a href="#5.7" class="lyref">5.7</a>  相同。</p></li>
+<li><p><span class="lyterm"><a href="#lou4">陋</a></span>：指偏远闭塞未开化，近似于穷乡僻壤刁民的意味。<a id="helouzhiyou"></a>孔子说<span class="lyterm">何陋之有</span>，《论语注疏》认为是能移风易俗：<span class="lyq">君子所居则<a href="#hua4">化</a>，使有礼义。</span>也可以理解为修养达到了<a href="#4.10">无适无莫</a>、<a href="#18.8">无可无不可</a>的境界，可以安之若素。<span class="lyseealso"><span>【参】</span><span>《中庸》：<span class="lyq">君子素其位而行，不愿乎其外。素富贵，行乎富贵；素贫贱，行乎贫贱；素<a href="#yidihuaxia">夷狄</a>，行乎夷狄；素患难，行乎患难——君子无入而不自得焉。在上位不陵下，在下位不援上，正己而不求于人，则无怨。上不怨天，下不<a href="#you2a">尤</a>人。故君子居易以<a href="#si4a">俟</a>命，小人行险以徼幸。</span>（素：本，据。<a id="ling2"></a>陵：欺侮，侵犯。援：攀附。居易：守常。徼（<span class="lypinyin">jiǎo</span>）幸：同“侥幸”。）</span></span></p></li>
 </ul></div>
 </div>
 <a id="9.15"></a><div class="lyblob">
@@ -3464,7 +3467,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">公门</span>：国君的外门。</p></li>
 <li><p><span class="lyterm">鞠<a href="#gong1a">躬</a></span>：弯腰行礼，引申为形容恭敬谨慎的样子。<span class="lyterm">鞠</span>：弯曲。<span class="lyexample"><span>【例】</span><span>《史记·韩长孺列传》结尾：<span class="lyq">壶遂之内<a href="#lian2">廉</a>行修，斯鞠躬君子也。</span>（壶遂：汉武帝时的上大夫，曾与司马迁等议造《<a href="#lifa">太初历</a>》。修：美，善。）</span></span></p></li>
-<li><p><span class="lyterm">立不中门，行不履阈</span>（<span class="lypinyin">yù</span>）：站立的时候不站在门中间，走路的时候不踩到门槛。</p></li>
+<li><p><span class="lyterm">立不中门，行不<a href="#lv3">履</a>阈</span>（<span class="lypinyin">yù</span>）：站立的时候不站在门中间，走路的时候不踩到门槛。</p></li>
 <li><p><span class="lyterm">过位</span>：指经过国君的座位。</p></li>
 <li>
 <p><span class="lyterm">摄齐</span>（<span class="lypinyin">zī</span>）：提起衣下襟，以免踩绊失仪。<span class="lyterm">齐</span>：长衣的下摆。</p>
@@ -3709,7 +3712,7 @@ img.characterimg {
 <p><span class="lyterm">色斯举矣，翔而后集</span>。本章疑有脱漏，难以确解。场景大概是，孔子和学生们经过一座山，看到一群<span class="lyterm">雉</span>（<span class="lypinyin">zhì</span>，野山鸡），孔子刚动了动表情没等说话，它们就敏感地飞上天，盘旋了一会才停聚到远处的山脊。<span class="lyterm">斯</span>：无意义的衬字。</p>
 <p><span class="lyseealso"><span>【参】</span><span>《论语注疏》解释为：<span class="lyq">见颜色不善则去之……回翔<a href="#shen3">审</a>观而后下止。</span>《四书集注》进一步说：<span class="lyq">人之见<a href="#ji1b">几</a>而作，审择所处，亦当如此。</span>《韩诗外传》卷二第21章，引用这句话来评价<a href="#jieyu">接舆</a>之妻的敏锐。天下无道，接舆躬耕以食，楚王派使者重金聘他为官，接舆笑而不应。其妻从市集回来后问：<span class="lyq">先生少而为义，岂将老而遗之哉？门外车轶何其深也？</span>（轶（<span class="lypinyin">zhé</span>）：通“辙”，车轮印。）于是一起隐居避世。<span class="lyq">《论语》曰：“色斯举矣，翔而后集。”接舆之妻是也。</span></span></span></p>
 <p>后来，“色斯”就代指离去、隐遁。<span class="lyexample"><span>【例】</span><span>《三国志·魏书·崔琰（<span class="lypinyin">yǎn</span>）传》：<span class="lyq">哲人君子，俄有色斯之志。</span>（俄：瞬间，顿时。）</span></span>“翔而后集”形容名人贤士的动向招来众多追随者，又指学问上博览详察，综合采纳。<span class="lyexample"><span>【例】</span><span>《三国志·魏书·和洽传》裴松之注引《汝南先贤传》说，东汉末年名士许劭屡征不就，<span class="lyq">避乱江南，所历之国，必翔而后集。</span>唐代杜淹《文中子世家》载，文中子王通之父曾教诲他：<span class="lyq">“自天子至庶人，未有不<a href="#zi1a">资</a>友而成者也。……小子勉旃，翔而后集。”</span>于是王通求学四方，<span class="lyq">不解衣者六岁，其精志如此。</span>（旃（<span class="lypinyin">zhān</span>）：之，焉。）</span></span></p>
-<p><a id="jiandu"></a>从周朝到东汉发明造纸术以前，古代书籍多是将文字竖刻在竹片或木片上，再用线绳或牛皮绳横联起来，称为<span class="lykeyword">简牍</span>。由于制作保管不易，篇章首尾容易产生错乱混杂，相似的情况还有 <a href="#16.12" class="lyref">16.12</a> <a href="#16.14" class="lyref">16.14</a> <a href="#20.1" class="lyref">20.1</a> 。</p>
+<p><a id="jiandu"></a>从周朝到东汉发明造纸术以前，古代书籍多是将文字纵向写或刻在竹片、木片上，再用线绳、皮绳横联起来。只容一竖行的窄竹片称为<span class="lykeyword">简</span>，能多写几行的木片称为<span class="lykeyword">牍</span>，所用的绳称为<span class="lykeyword">编</span>，编成一串作为单元的简牍称为<span class="lykeyword">篇</span>，或者也叫<span class="lykeyword">编</span>（更宽一些的木片称为<span class="lykeyword">方</span>，可以单独使用了）。一篇包含若干<span class="lykeyword">章</span>，是按内容划分的，相当于<a href="#shijing">诗乐</a>的一节，有的是作者自己标明，有的是后人点断，如《论语》。这样的书写系统很不方便，成语“连篇累牍”就是嫌人写得太多。由于制作保管不易，各篇首尾容易错乱混杂，相似的情况还有 <a href="#16.12" class="lyref">16.12</a> <a href="#16.14" class="lyref">16.14</a> <a href="#20.1" class="lyref">20.1</a> 。随着4世纪纸的普及，纸抄本代替了简牍，能比较轻松地卷（<span class="lypinyin">juǎn</span>）持于手，<span class="lykeyword">卷</span>（<span class="lypinyin">juàn</span>）也取代篇成为新的单元了。</p>
 </li>
 <li><p><span class="lyterm">时哉时哉</span>的感慨，可能是孔子自叹不遇其时，或者无法与世推移。<span class="lyseealso"><span>【参】</span><span><a href="#14.3" class="lyref">14.3</a> <a href="#16.11" class="lyref">16.11</a> </span></span></p></li>
 <li><p><span class="lyterm">共</span>（<span class="lypinyin">gǒng</span>）：通“拱”，拱手。也有说通“供”，指拿食物给它们吃，但结合第一句看似难说通。《吕氏春秋·季秋纪·审己》开头有<span class="lyq">子路掩雉而复释之</span>（掩：突袭式捕捉）的记载，或许和本章情节有关。</p></li>
@@ -5611,7 +5614,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li><p><span class="lyterm">夫人</span>：《曲礼下》孔颖达疏：<span class="lyq">夫，扶也，言扶持于王也。</span></p></li>
 <li><p><span class="lyterm">小童</span>：国君夫人对自己的谦称。《曲礼下》郑玄注：<span class="lyq">若云未成人也。</span></p></li>
-<li><p><a id="gua3"></a><span class="lyterm"><a href="#gua3a">寡</a></span>：王侯对自己的谦称，意为少<a href="#de2a">德</a>或孤独，二者是因果关系。对别国人谦称本国国君，可称<span class="lykeyword">寡君</span>。<span class="lyterm">寡小君</span>：《曲礼下》孔颖达疏：<span class="lyq">君之妻曰小君，而云寡者，亦从君为谦也。</span><span class="lyseealso"><span>【参】</span><span>《老子·三十九章》：<span class="lyq">贵以贱为本，高以下为基。是以侯王自称孤、寡、不谷。</span></span></span></p></li>
+<li><p><a id="gua3"></a><span class="lyterm"><a href="#gua3a">寡</a></span>：王侯对自己的谦称，意为少<a href="#de2a">德</a>或孤独，二者是因果关系。对别国人谦称本国国君，可称<span class="lykeyword">寡君</span>。<span class="lyterm">寡小君</span>：《曲礼下》孔颖达疏：<span class="lyq">君之妻曰小君，而云“寡”者，亦从君为谦也。</span><span class="lyseealso"><span>【参】</span><span>《老子·三十九章》：<span class="lyq">贵以贱为本，高以下为基。是以侯王自称孤、寡、不谷。</span></span></span></p></li>
 </ul>
 </div>
 </div>
