--- a/aboly.html
+++ b/aboly.html
@@ -939,7 +939,7 @@ img.characterimg {
 <li><p><span class="lyterm">耳顺</span>：耳朵顺合于话语，即自然而然就能准确地领会别人话中的含义，另外也有多从积极的方面理解别人的话、兼收并蓄的意思。</p></li>
 <li><p><span class="lyterm">逾矩</span>：超越法度，违规犯法。<a id="yu2d"></a><span class="lyterm">逾</span>：越过，超过。<span class="lyterm">矩</span>：法度，规范，本义为用来画直角的曲尺，又引申为方形。</p></li>
 </ul>
-<p><a id="erlibuhuo"></a>后来，志学、而立、不惑、知命、耳顺，就用来指年龄的15、30、40、50、60岁。</p>
+<p><a id="erlibuhuo"></a>后来，志学、而立、不惑、知命、耳顺，就是指年龄的15、30、40、50、60岁。</p>
 </div>
 </div>
 <a id="2.5"></a><div class="lyblob">
@@ -1271,7 +1271,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p><a id="yidihuaxia"></a><span class="lyterm">夷狄</span>：泛指中原地区以外的异族人。相对地，<span class="lyterm">诸夏</span>就是指中原地区的各诸侯国。</p>
-<p>历史上，居住在中原地区、崇尚农耕文化的汉族具有浓厚的中心意识和优越感，自称<span class="lykeyword">华夏</span>，将文化较落后、从事游牧的外族蔑称为<span class="lykeyword">夷</span>或<span class="lykeyword">裔</span>，又按方位分为东夷、南蛮、西戎、北狄。<a href="#zhouchao">春秋</a>时起，人口的流动与杂居增强，许多周边民族自觉或不自觉地被中原文明同化，成为华夏的有机部分。<span class="lyexample"><span>【例】</span><span>《晋书·何曾传》载，阮籍居丧放诞，何曾建议魏文帝<span class="lyq">宜摈〔籍〕四裔，无令污染华夏。</span>（摈（<span class="lypinyin">bìn</span>）：弃，指放逐。）</span></span><span class="lyseealso"><span>【参】</span><span>《左传·定公十年》孔颖达正义：<span class="lyq">夏，大也。<a href="#zhongguo">中国</a>有礼仪之大，故称夏；有服章之美，谓之<a href="#hua1">华</a>。华、夏一也。</span>唐太宗认为：<span class="lyq">治安中国，而四夷自服</span>，这也是中国古代的传统外交理念。</span></span></p>
+<p>历史上，居住在中原地区、崇尚农耕文化的汉族具有浓厚的中心意识和优越感，自称<span class="lykeyword">华夏</span>，将文化较落后、从事游牧的外族蔑称为<span class="lykeyword">夷</span>或<span class="lykeyword">裔</span>，又按方位分为东夷、南蛮、西戎、北狄。<a href="#zhouchao">春秋</a>时起，人口的流动与杂居增强，许多周边民族自觉或不自觉地被中原文明同化，成为华夏的有机部分。<span class="lyexample"><span>【例】</span><span>《晋书·何曾传》载，阮籍居丧放诞，何曾建议魏文帝<span class="lyq">宜摈〔籍〕四裔，无令污染华夏。</span>（摈（<span class="lypinyin">bìn</span>）：弃，指放逐。）</span></span><span class="lyseealso"><span>【参】</span><span>《左传·定公十年》孔颖达正义：<span class="lyq">夏，大也。<a href="#zhongguo">中国</a>有礼仪之大，故称夏；有服章之美，谓之<a href="#hua1">华</a>。华、夏一也。</span>唐太宗认为：<span class="lyq">治安中国，而四夷自服</span>，这也是中国古代传统的外交理念。</span></span></p>
 <p><a id="zhongyuan"></a><span class="lykeyword">中原</span>是以今天的河南省为中心，延至黄河中下游地区，大致包括河南、河北、山西南部、山东西部、安徽北部。河南大致对应于古代<a href="#sanfentianxia">九州</a>居中的豫州，夏商周三代都奠基于此，被认为是<a href="#tianxia">天下</a>的中心。春秋时期主要的中原诸侯国由东至西有：齐、鲁、宋、卫、郑、陈、蔡、晋，其中，周都北方的晋和东北的齐并为赫然大国。中原以外的主要诸侯国有：齐国北部的燕、东南沿海的吴与越、南方的楚、西方的秦，它们都曾称霸一时，以楚与秦的实力最为雄厚。 </p>
 <p><a id="zhongguo"></a><span class="lykeyword">中国</span>之名体现了华夏民族历史久远的自我中心观。周天子自称中国，是指中原地区。诸侯有时也自称中国，是以国都为中心的封国。秦汉统一天下后，中国就成为地理与政治文化正统合而为一的概念。</p>
 </li>
@@ -3248,7 +3248,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子欲居九夷。或曰：“陋，如之何？”子曰：“君子居之，何陋之有？”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">九<a href="#yidihuaxia">夷</a></span>：东方少数民族居住的地区，对应于现代山东、江苏的沿海一带，可参考《三国志·魏书·东夷传》、《后汉书·东夷列传》。孔子打算移居的原因，也许和 <a href="#5.7" class="lyref">5.7</a>  相同。</p></li>
-<li><p><span class="lyterm"><a href="#lou4">陋</a></span>：指偏远闭塞未开化，近似于穷乡僻壤刁民的意味。<a id="helouzhiyou"></a>孔子说<span class="lyterm">何陋之有</span>，《论语注疏》认为是能移风易俗：<span class="lyq">君子所居则<a href="#hua4">化</a>，使有礼义。</span>也可以理解为修养达到了<a href="#4.10">无适无莫</a>、<a href="#18.8">无可无不可</a>的境界，可以安之若素。<span class="lyseealso"><span>【参】</span><span>《中庸》：<span class="lyq">君子素其位而行，不愿乎其外。素富贵，行乎富贵；素贫贱，行乎贫贱；素<a href="#yidihuaxia">夷狄</a>，行乎夷狄；素患难，行乎患难——君子无入而不自得焉。在上位不陵下，在下位不援上，正己而不求于人，则无怨。上不怨天，下不<a href="#you2a">尤</a>人。故君子居易以<a href="#si4a">俟</a>命，小人行险以徼幸。</span>（素：本，据。<a id="ling2"></a>陵：欺侮，侵犯。援：攀附。居易：守常。徼（<span class="lypinyin">jiǎo</span>）幸：同“侥幸”。）</span></span></p></li>
+<li><p><span class="lyterm"><a href="#lou4">陋</a></span>：指偏远闭塞未开化，近似于穷乡僻壤刁民的意味。<a id="helouzhiyou"></a>孔子说<span class="lyterm">何陋之有</span>，《论语注疏》认为是能移风易俗：<span class="lyq">君子所居则<a href="#hua4">化</a>，使有礼义。</span>也可以理解为修养达到了<a href="#4.10">无适无莫</a>、<a href="#18.8">无可无不可</a>的境界，能够安之若素。<span class="lyseealso"><span>【参】</span><span>《中庸》：<span class="lyq">君子素其位而行，不愿乎其外。素富贵，行乎富贵；素贫贱，行乎贫贱；素<a href="#yidihuaxia">夷狄</a>，行乎夷狄；素患难，行乎患难——君子无入而不自得焉。在上位不陵下，在下位不援上，正己而不求于人，则无怨。上不怨天，下不<a href="#you2a">尤</a>人。故君子居易以<a href="#si4a">俟</a>命，小人行险以徼幸。</span>（素：本，据。<a id="ling2"></a>陵：欺侮，侵犯。援：攀附。居易：守常。徼（<span class="lypinyin">jiǎo</span>）幸：同“侥幸”。）</span></span></p></li>
 </ul></div>
 </div>
 <a id="9.15"></a><div class="lyblob">
@@ -3712,7 +3712,7 @@ img.characterimg {
 <p><span class="lyterm">色斯举矣，翔而后集</span>。本章疑有脱漏，难以确解。场景大概是，孔子和学生们经过一座山，看到一群<span class="lyterm">雉</span>（<span class="lypinyin">zhì</span>，野山鸡），孔子刚动了动表情没等说话，它们就敏感地飞上天，盘旋了一会才停聚到远处的山脊。<span class="lyterm">斯</span>：无意义的衬字。</p>
 <p><span class="lyseealso"><span>【参】</span><span>《论语注疏》解释为：<span class="lyq">见颜色不善则去之……回翔<a href="#shen3">审</a>观而后下止。</span>《四书集注》进一步说：<span class="lyq">人之见<a href="#ji1b">几</a>而作，审择所处，亦当如此。</span>《韩诗外传》卷二第21章，引用这句话来评价<a href="#jieyu">接舆</a>之妻的敏锐。天下无道，接舆躬耕以食，楚王派使者重金聘他为官，接舆笑而不应。其妻从市集回来后问：<span class="lyq">先生少而为义，岂将老而遗之哉？门外车轶何其深也？</span>（轶（<span class="lypinyin">zhé</span>）：通“辙”，车轮印。）于是一起隐居避世。<span class="lyq">《论语》曰：“色斯举矣，翔而后集。”接舆之妻是也。</span></span></span></p>
 <p>后来，“色斯”就代指离去、隐遁。<span class="lyexample"><span>【例】</span><span>《三国志·魏书·崔琰（<span class="lypinyin">yǎn</span>）传》：<span class="lyq">哲人君子，俄有色斯之志。</span>（俄：瞬间，顿时。）</span></span>“翔而后集”形容名人贤士的动向招来众多追随者，又指学问上博览详察，综合采纳。<span class="lyexample"><span>【例】</span><span>《三国志·魏书·和洽传》裴松之注引《汝南先贤传》说，东汉末年名士许劭屡征不就，<span class="lyq">避乱江南，所历之国，必翔而后集。</span>唐代杜淹《文中子世家》载，文中子王通之父曾教诲他：<span class="lyq">“自天子至庶人，未有不<a href="#zi1a">资</a>友而成者也。……小子勉旃，翔而后集。”</span>于是王通求学四方，<span class="lyq">不解衣者六岁，其精志如此。</span>（旃（<span class="lypinyin">zhān</span>）：之，焉。）</span></span></p>
-<p><a id="jiandu"></a>从周朝到东汉发明造纸术以前，古代书籍多是将文字纵向写或刻在竹片、木片上，再用线绳、皮绳横联起来。只容一竖行的窄竹片称为<span class="lykeyword">简</span>，能多写几行的木片称为<span class="lykeyword">牍</span>，所用的绳称为<span class="lykeyword">编</span>，编成一串作为单元的简牍称为<span class="lykeyword">篇</span>，或者也叫<span class="lykeyword">编</span>（更宽一些的木片称为<span class="lykeyword">方</span>，可以单独使用了）。一篇包含若干<span class="lykeyword">章</span>，是按内容划分的，相当于<a href="#shijing">诗乐</a>的一节，有的是作者自己标明，有的是后人点断，如《论语》。这样的书写系统很不方便，成语“连篇累牍”就是嫌人写得太多。由于制作保管不易，各篇首尾容易错乱混杂，相似的情况还有 <a href="#16.12" class="lyref">16.12</a> <a href="#16.14" class="lyref">16.14</a> <a href="#20.1" class="lyref">20.1</a> 。随着4世纪纸的普及，纸抄本代替了简牍，能比较轻松地卷（<span class="lypinyin">juǎn</span>）持于手，<span class="lykeyword">卷</span>（<span class="lypinyin">juàn</span>）也取代篇成为新的单元了。</p>
+<p><a id="jiandu"></a>从周朝到东汉发明造纸术以前，古代书籍多是将文字纵向写或刻在竹片、木片上，再用线绳、皮绳横联起来。只容一竖行的窄竹片称为<span class="lykeyword">简</span>，能多写几行的木片称为<span class="lykeyword">牍</span>，所用的绳称为<span class="lykeyword">编</span>。编成一串作为单元的简牍称为<span class="lykeyword">篇</span>，或者干脆也叫<span class="lykeyword">编</span>，再绑成沉重的一捆收藏（更宽一些的木片称为<span class="lykeyword">方</span>，可以单独使用）。一篇包含若干<span class="lykeyword">章</span>，是按内容划分的，相当于<a href="#shijing">诗乐</a>的一节，有的是作者自己标明，有的是后人点断，如《论语》。这样的书写系统很不方便，成语“连篇累牍”就是嫌人文章写得太长。由于制作保管不易，各篇首尾容易错乱混杂，相似的情况还有 <a href="#16.12" class="lyref">16.12</a> <a href="#16.14" class="lyref">16.14</a> <a href="#20.1" class="lyref">20.1</a> 。随着4世纪纸的普及，纸抄本代替了简牍，能比较轻松地卷（<span class="lypinyin">juǎn</span>）持于手，<span class="lykeyword">卷</span>（<span class="lypinyin">juàn</span>）也取代篇成为新的单元了。</p>
 </li>
 <li><p><span class="lyterm">时哉时哉</span>的感慨，可能是孔子自叹不遇其时，或者无法与世推移。<span class="lyseealso"><span>【参】</span><span><a href="#14.3" class="lyref">14.3</a> <a href="#16.11" class="lyref">16.11</a> </span></span></p></li>
 <li><p><span class="lyterm">共</span>（<span class="lypinyin">gǒng</span>）：通“拱”，拱手。也有说通“供”，指拿食物给它们吃，但结合第一句看似难说通。《吕氏春秋·季秋纪·审己》开头有<span class="lyq">子路掩雉而复释之</span>（掩：突袭式捕捉）的记载，或许和本章情节有关。</p></li>
@@ -4569,7 +4569,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“君子易事而难说也。说之不以道，不说也；及其使人也，器之。小人难事而易说也。说之虽不以道，说也；及其使人也，求备焉。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm"><a href="#qi4">器</a>之</span>：指以其器用之，根据才具能力合理分配任务。</p></li>
-<li><p><span class="lyterm">求备</span>：指（什么事情都）苛求做得妥善周到。<a id="bei4a"></a><span class="lyterm">备</span>：齐全，完备。<span class="lyexample"><span>【例】</span><span>成语“求全<a href="#ze2a">责</a>备”指对人或对事要求完美无缺。</span></span></p></li>
+<li><p><span class="lyterm">求备</span>：指（什么事情都）苛求做得妥善周到。<a id="bei4a"></a><span class="lyterm">备</span>：齐全，完备。<span class="lyexample"><span>【例】</span><span>成语“求全<a href="#ze2a">责</a>备”指对人或对事要求完美无缺。</span></span><span class="lyseealso"><span>【参】</span><span>《四书集注》：<span class="lyq">君子之心公而<a href="#shu4">恕</a>，小人之心私而刻。</span>（刻：苛。）</span></span></p></li>
 </ul></div>
 </div>
 <a id="13.26"></a><div class="lyblob">
@@ -5122,7 +5122,7 @@ img.characterimg {
 <li><p><span class="lyterm">陈</span>（<span class="lypinyin">zhèn</span>）：排兵布阵，由“陈列”引申而来，后来这个含义专写作“阵”。军旅可陈，俎豆也可陈，从这个双关可以想见孔子回答时的心情。</p></li>
 <li>
 <p><span class="lyterm">俎（<span class="lypinyin">zǔ</span>）豆之事</span>：指祭祀、宴会方面的礼仪，和<a href="#biandouzhishi">笾豆之事</a>意思相同。</p>
-<p><span class="lyterm">俎</span>：古代祭祀、设宴时放置牲肉的几案形礼器。</p>
+<p><a id="zu3"></a><span class="lyterm">俎</span>：古代祭祀、设宴时放置牲肉的几案形礼器。</p>
 </li>
 </ul></div>
 </div>
@@ -5178,7 +5178,10 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="shiyu"></a><span class="lyterm">史鱼</span>：卫国大夫，名鳅，字子鱼，他和<a href="#zhutuo">祝鮀</a>的字相同，但不是同一人。据《孔子家语·困誓》、《韩诗外传》第7卷第21章，<a href="#weilinggong">卫灵公</a>不用贤臣蘧伯玉，信任男宠<a href="#mizixia">弥子瑕</a>，史鱼多次力谏未果，临终前仍然念念不忘，觉得<span class="lyq">为臣不能正君</span>，是自己失职，嘱咐儿子不要在正堂治丧，把尸体摆在窗户底下就行了。来吊丧的灵公得知后大惊，立即任用了蘧伯玉，疏远了弥子瑕。《韩诗外传》评曰：<span class="lyq">生以身谏，死以尸谏，可谓直矣！</span></p></li>
 <li><p><span class="lyterm">如矢</span>：指像箭一样直不可屈。<a id="shi3"></a><span class="lyterm">矢</span>：箭。</p></li>
-<li><p><span class="lyterm">卷而怀之</span>：卷起来放进怀里，这是比喻用法，指把自己的才能主张收藏好，不施展外露，具体所指的事迹已难确考。前面的<span class="lyterm">可</span>字说明，具备适当的柔韧性值得赞赏，但“卷而怀之”并不等于“邦无道”时唯一可行的途径。<span class="lyseealso"><span>【参】</span><span>《晋书·王戎传》载，竹林七贤之末的王戎<span class="lyq">以晋室方乱，慕蘧伯玉之为人，与时舒卷，无蹇谔之节。自经典选，未尝进寒素、退虚名，但与时浮沉，户调门选而已。</span>晋武帝司马炎曾为他开脱：<span class="lyq">“戎之为行，岂怀私苟得，正当不欲为异耳！”</span>他位至三公，却委事下属，欢娱逐乐，并无蘧伯玉汲汲于仁的精神，也落得个<span class="lyq">苟媚取容</span>的评价。（蹇（<span class="lypinyin">jiǎn</span>）<a href="#e4">谔</a>：忠直敢言的样子。蹇：通“謇”，本义为口吃，引申为仗义执言，正直。经：管理。典选：选才为官，王戎时任吏部尚书。寒素：指门第低微的贤才。户调门选：指依照家世地位录用。）</span></span></p></li>
+<li>
+<p><span class="lyterm">卷而怀之</span>：卷起来放进怀里，这是比喻用法，指把自己的才能主张收藏好，不施展外露，具体所指的事迹已难确考。《四书集注》等古注把<span class="lyterm">卷</span>解为收，<span class="lyterm">怀</span>解为藏，则是直接揭示了言下之意。<span class="lyexample"><span>【例】</span><span>《仪礼·公食大夫礼》：<span class="lyq"><a href="#yousi">有司</a>卷三牲之<a href="#zu3">俎</a>，归于宾馆。</span><a href="#17.1" class="lyref">17.1</a> <span class="lyq">怀其宝而迷其邦。</span></span></span></p>
+<p>前面的<span class="lyterm">可</span>字说明，具备适当的柔韧性值得赞赏，但“卷而怀之”并不等于“邦无道”时唯一可行的途径，所以孔子对史鱼的“直”和蘧伯玉的“可卷”都持肯定态度。<span class="lyseealso"><span>【参】</span><span>《晋书·王戎传》载，竹林七贤之末的王戎<span class="lyq">以晋室方乱，慕蘧伯玉之为人，与时舒卷，无蹇谔之节。自经典选，未尝进寒素、退虚名，但与时浮沉，户调门选而已。</span>晋武帝司马炎曾为他开脱：<span class="lyq">“戎之为行，岂怀私苟得，正当不欲为异耳！”</span>他位至三公，却委事下属，欢娱逐乐，并无蘧伯玉汲汲于仁的精神，也落得个<span class="lyq">苟媚取容</span>的评价。（蹇（<span class="lypinyin">jiǎn</span>）<a href="#e4">谔</a>：忠直敢言的样子。蹇：通“謇”，本义为口吃，引申为仗义执言，正直。经：管理。典选：选才为官，王戎时任吏部尚书。寒素：指门第低微的贤才。户调门选：指依照家世地位录用。）</span></span></p>
+</li>
 </ul></div>
 </div>
 <a id="15.8"></a><div class="lyblob">
