--- a/ly.html
+++ b/ly.html
@@ -10,7 +10,7 @@ permalink: /ly
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>论语</title>
-<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <style type="text/css">
 body {
     font-family: Helvetica, sans-serif;
@@ -150,8 +150,8 @@ a:link {
     }
 }
 </style>
-<script src="http://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-<script src="http://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script>
 (function() {
     // Random jump.
@@ -402,8 +402,8 @@ a:link {
 <a id="navsettings" href="#" data-toggle="dropdown" class="dropdown-toggle lynavbar-anchor"><span class="glyphicon glyphicon-menu-hamburger"></span></a><ul class="dropdown-menu lyscrollable-menu">
 <li><a id="toggleblobtags"><span class="glyphicon glyphicon-ok"></span> 显示章号</a></li>
 <li class="nav-divider">
-<li><a href="http://pan.baidu.com/s/1eRp6vMq" target="_blank"><span class="glyphicon glyphicon-download-alt"></span> PDF版</a></li>
-<li><a href="http://www.abolybook.org" target="_blank"><span class="glyphicon glyphicon-home"></span> 主页</a></li>
+<li><a href="https://pan.baidu.com/s/1eRp6vMq" target="_blank"><span class="glyphicon glyphicon-download-alt"></span> PDF版</a></li>
+<li><a href="https://www.abolybook.org" target="_blank"><span class="glyphicon glyphicon-home"></span> 主页</a></li>
 <li><a href="/ideas" target="_blank"><span class="glyphicon glyphicon-comment"></span> 留言</a></li>
 <li><a href="/donate" target="_blank"><span class="glyphicon glyphicon-heart"></span> 赞助</a></li>
 </ul>
@@ -414,7 +414,7 @@ a:link {
 <div class="container">
 <div id="print-reminder">
 <p>感谢阅读《论语》白文版！</p>
-<p>它的PDF版打印效果更好，更有“书”的感觉，还带有详细的目录，适合放在电脑或手机里阅读，可以从本书网站（http://www.abolybook.org）下载。</p>
+<p>它的PDF版打印效果更好，更有“书”的感觉，还带有详细的目录，适合放在电脑或手机里阅读，可以从本书网站（https://www.abolybook.org）下载。</p>
 </div>
 <a id="1"></a><h1 class="lybodychapter">1. 学而</h1>
 <a id="1.1"></a><div class="lyblob">
