Fix DOCTYPE, the xsltproc anomaly (old xalan is good).

--- a/aboly.html
+++ b/aboly.html
@@ -3,7 +3,7 @@ layout: empty
 permalink: /aboly
 ---
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
+<!DOCTYPE html>
 <html lang="zh-Hans">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -1181,7 +1181,7 @@ img.characterimg {
 <p><a id="xiachao"></a><span class="lyterm">夏</span>（约前2070年—约前1600年）：即夏朝，国号夏<a href="#hou4">后</a>，姒（<span class="lypinyin">sì</span>）<a href="#xingshi">姓</a>，是中国历史上第一个<a href="#shanrang">世袭制</a>王朝，由<a href="#yu">禹</a>传位给儿子启建立，末代君王是著名的暴君桀（<span class="lypinyin">jié</span>）。夏朝社会处于半游牧半农耕阶段，尚未有明晰的都城概念，部族定居处多次迁徙。尽管考古依据尚未充足，传统上一直把夏朝视为中国的第一个朝代，<a href="#yidihuaxia">华夏</a>也成为中国的代名词。又有传说，夏朝之前还存在虞朝，<a href="#shun">舜帝</a>就是有虞氏的一员，所以古书常合称虞夏。</p>
 <p><a id="shangchao"></a><span class="lyterm">殷</span>（约前1600年—前1046年）：即商朝，子姓，由<a href="#tang">汤</a>伐桀推翻<a href="#xiachao">夏朝</a>后建立，末代君王是著名的暴君<a href="#zhou">纣</a>。据《史记·殷本纪》，商王室的始祖契（<span class="lypinyin">xiè</span>）被<a href="#shun">舜帝</a>封于商（在今河南省商丘市），就取地名为国号。《帝王世纪·殷商》载：<span class="lyq">帝盘庚徙都殷，始改商曰殷。</span>盘庚迁都约在前1300年，之前也曾迁都数次。殷墟在今河南省安阳市，此后一直是商的都城。<a id="zhaoge"></a><a href="#zhou">纣王</a>常驻的陪都朝（<span class="lypinyin">zhāo</span>）歌，在今河南省鹤壁市淇县。商朝的甲骨文和金文，是中国最早的文字系统。</p>
 <p><a id="zhouchao"></a><span class="lyterm">周</span>（前1046年—前256年）：即周朝，姬姓，由<a href="#wu">武王</a>伐<a href="#zhou">纣</a>推翻<a href="#shangchao">商朝</a>后建立。前770年，<a href="#lixuanyouping">周平王</a>为躲避<a href="#yidihuaxia">犬戎</a><a href="#zhouyouwang">侵扰</a>，将都城由镐（<span class="lypinyin">hào</span>）京（即西都<span class="lykeyword">宗周</span>，在今陕西省西安市）东迁至<a id="luoyi"></a>洛邑（即东都<span class="lykeyword">成周</span>，在今河南省洛阳市，较接近殷遗民之地）。周朝以此为先后，分为<span class="lykeyword">西周</span>和<span class="lykeyword">东周</span>，开启了周室衰落、诸侯争<a href="#badao">霸</a>的序幕。后代史家又将东周分为<span class="lykeyword">春秋</span>时期和<span class="lykeyword">战国</span>时期，分法并不统一，如以<a href="#sanjiafenjin">三家分晋</a>（前453年或前403年）为界，标志着各国之间征伐兼并、各国内部君臣权贵争斗厮杀的白热化。从西周<a href="#zhoushaogonghe">共和元年</a>（前841年）起，中国历史有了连贯的同期文字记录，进入信史时代。</p>
-<p><a id="wangji"></a>王朝首都周边由君王直接管辖的区域，称为<span class="lykeyword">王畿</span>（<span class="lypinyin">jī</span>）。西周的王畿在镐京至洛邑一带，方圆约千里，东迁后大为缩减。商朝和周朝实行<span class="lykeyword">分封制</span>，由君王将王畿以外的土地分封给诸侯，授以爵位，建立相对独立自治的国家。<a id="xizhouguo"></a>前440年，周考王封其弟于王畿，在洛邑之西，这个小国称为<span class="lykeyword">西周国</span>，国君称西周公（或西周<a href="#jun1">君</a>，和<a href="#zhougong">周公</a>不是一回事）。前367年由于内乱，又从西周国的东部分裂出<span class="lykeyword">东周国</span>，位于巩（在今河南省巩义市西南）。战国末期，秦国独大，前256年，西周国联合诸侯攻秦，反遭秦吞并，尽丧其36 <a href="#yi4c">邑</a>及周王室九鼎，西周公和周朝末代君王周赧王均于同年去世，周朝灭亡。前249年，东周国同样伐秦失败而遭灭国。<a id="qintongyitianxia"></a>前221年，秦完成了对其它诸侯国的侵吞，统一天下，随后取消分封，设立郡县，由朝廷选派官员统一管理，开创了<span class="lykeyword">中央集权制</span>的时代。</p>
+<p><a id="wangji"></a>王朝首都周边由君王直接管辖的区域，称为<span class="lykeyword">王畿</span>（<span class="lypinyin">jī</span>）。西周的王畿在镐京至洛邑一带，方圆约千里，东迁后大为缩减。商朝和周朝实行<span class="lykeyword">分封制</span>，由君王将王畿以外的土地分封给诸侯，授以爵位，建立相对独立自治的国家。<a id="xizhouguo"></a>前440年，周考王封其弟于王畿，在洛邑之西，这个小国称为<span class="lykeyword">西周国</span>，国君称西周公（或西周<a href="#jun1">君</a>，和<a href="#zhougong">周公</a>不是一回事）。前367年由于内乱，又从西周国的东部分裂出<span class="lykeyword">东周国</span>，位于巩（在今河南省巩义市西南）。战国末期，秦国独大，前256年，西周国联合诸侯攻秦，反遭秦吞并，尽丧其36 <a href="#yi4c">邑</a>及周王室九鼎，西周公和周朝末代君王周赧王均于同年去世，周朝灭亡。前249年，东周国同样伐秦失败遭到灭国。<a id="qintongyitianxia"></a>前221年，秦完成了对其它诸侯国的侵吞，统一天下，随后取消分封，设立郡县，由朝廷选派官员统一管理，开创了<span class="lykeyword">中央集权制</span>的时代。</p>
 <p><a id="sandai"></a>夏、商、周合称<span class="lykeyword">三代</span>，被儒家视为盛世的象征。东周时所称的三代当然只包含到西周，如 <a href="#15.25" class="lyref">15.25</a> <span class="lyq">斯民也，三代之所以直道而行也</span>。而随后的秦朝刑法严苛，享国日短，又夹在周、汉两个大朝之间，被视为暴政的典型，所以“三代”就把整个周朝都算在内。周朝由盛转衰的标志是平王东迁，天子之权从此操弄于诸侯之手。如清代乾隆帝《贞观政要》序说：<span class="lyq">夫三代以上，君明臣良，天下雍熙，世登上理。自东迁以降，风俗日<a href="#tou1a">薄</a>，天下无复熙皞之美。</span>（雍：和谐。熙：繁荣和睦。熙皞（<span class="lypinyin">hào</span>）：和乐。）</p>
 </li>
 <li><p><a id="yin1"></a><span class="lyterm">因</span>：顺承，沿袭。<span class="lyexample"><span>【例】</span><span>成语“因循守旧”。</span></span></p></li>
@@ -1194,7 +1194,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“非其鬼而祭之，谄也；见义不为，无勇也。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">非<a href="#qi2">其</a>鬼</span>：不是自己家去世的亲人。<a id="guishen"></a><span class="lykeyword">神</span>源于对自然力量的崇拜，而古代认为，人死以后，灵魂化为<span class="lyterm">鬼</span>，祭祀鬼神可以祈福。</p></li>
-<li><p><span class="lyterm">见<a href="#yi4">义</a>不为，无勇也。</span>后来有成语“见义勇为”，形容英勇正义的行为，也用来鼓励人勇敢去做正确的事。<span class="lyseealso"><span>【参】</span><span><a id="sierbuyi"></a>《左传·文公二年》：<span class="lyq">死而不<a href="#yi4">义</a>，非勇也。</span></span></span></p></li>
+<li><p><span class="lyterm">见<a href="#yi4">义</a>不为，无勇也。</span>后来有成语“见义勇为”，形容英勇正义的行为，也用来鼓励人勇敢去做正确的事。<span class="lyseealso"><span>【参】</span><span>《晏子春秋·内篇谏上·一》：<span class="lyq">轻死以行礼谓之勇。</span>（轻死：不畏惧死。）<a id="sierbuyi"></a>《左传·文公二年》：<span class="lyq">死而不<a href="#yi4">义</a>，非勇也。</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="3"></a><h1 class="lybodychapter">3. 八佾</h1>
@@ -1974,14 +1974,14 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="xingji"></a><span class="lyterm">行己</span>：自己立身做事，behave oneself。<span class="lyexample"><span>【例】</span><span><a href="#13.20" class="lyref">13.20</a> <span class="lyq">行己有耻。</span></span></span></p></li>
 <li><p><a id="hui4a"></a><span class="lyterm">惠</span>：宽厚仁爱。<span class="lyseealso"><span>【参】</span><span><a href="#14.9" class="lyref">14.9</a> <span class="lyq">或问子产，子曰：“惠人也。”</span></span></span></p></li>
-<li><p><span class="lyterm">义</span>：宜，适合，指顺应民心，不扰民。<a href="#6.22" class="lyref">6.22</a> <span class="lyq">务民之义</span>里也是这个意思。</p></li>
+<li><p><span class="lyterm"><a href="#yi4">义</a></span>：宜，指顺应民心，不扰民。<a href="#6.22" class="lyref">6.22</a> <span class="lyq">务民之义</span>里也是这个意思。</p></li>
 </ul></div>
 </div>
 <a id="5.17"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#5.17">5.17</a></div>
 <div class="lybloboriginaltext"><p>子曰：“晏平仲善与人交，久而敬之。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><a id="yanpingzhong"></a><span class="lyterm">晏平仲</span>：晏婴（前578年—前500年），春秋后期齐国的三朝重臣（灵公、<a href="#cuizhu">庄公</a>、<a href="#qijinggong">景公</a>），平是他的谥号（“布纲治纪曰平”），仲是他的字。他娴于外交，智慧通达，力行节俭，《史记·管晏列传》简要记述了他的事迹，《晏子春秋》集中载录了他的言行。晏婴墓在今山东省淄博市齐都镇。</p></li>
+<li><p><a id="yanpingzhong"></a><span class="lyterm">晏平仲</span>：晏婴（前578年—前500年），齐国夷维（今山东省高密市）人，春秋后期齐国的三朝重臣，平是他的谥号（“布纲治纪曰平”），仲是他的字。他智慧通达，勤政爱民，娴于外交，刘向在《晏子春秋总目》中评价他<span class="lyq">博闻强记，通于古今，事齐灵公、<a href="#cuizhu">庄公</a>、<a href="#qijinggong">景公</a>，以节俭力行、尽忠极谏<a href="#dao3">道</a>齐，国君得以正行，百姓得以附亲</span>。《史记·管晏列传》简要记述了他的事迹，《晏子春秋》集中载录了他的言行。晏婴墓在今山东省淄博市齐都镇。</p></li>
 <li><p><span class="lyterm">之</span>指“晏平仲”或“人”都讲得通。若干古本作“久而人敬之”。<span class="lyseealso"><span>【参】</span><span>《四书集注》引程颐语：<span class="lyq">人交久则敬衰。久而能敬，所以为善。</span>1866年，曾国藩在回复上海道台应宝时的信中说：<span class="lyq">令人敬畏，全在自立自强，不在装模作样。</span>原话中的“人”指外国<a href="#yuanren">远人</a>，但也不乏普遍意义。</span></span></p></li>
 </ul></div>
 </div>
@@ -1990,7 +1990,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“<a href="#zangwenzhong">臧文仲</a>居蔡，山节藻棁，何如其知也？”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">居蔡</span>：盖房子供养大乌龟。<a id="caigui"></a><span class="lyterm">蔡</span>：占卜用的大乌龟，古人相信越大的龟壳占卜起来越灵验。</p></li>
-<li><p><span class="lyterm">山节藻棁</span>（<span class="lypinyin">zhuō</span>）是天子专用的庙饰，臧文仲用于龟房，可见排场之隆重。<span class="lyterm">山节</span>：雕成山形的柱头斗拱。<span class="lyterm">藻棁</span>：画有藻纹的梁上短柱。</p></li>
+<li><p><span class="lyterm">山节藻棁</span>（<span class="lypinyin">zhuō</span>）是天子专用的庙饰，臧文仲用之于龟房，可见排场隆重。<span class="lyterm">山节</span>：雕成山形的柱头斗拱。<span class="lyterm">藻棁</span>：画有藻纹的梁上短柱。</p></li>
 <li><p><span class="lyterm">何如其<a href="#zhi4d">知</a>也？</span>：他哪里聪明呢？<a id="siyuanju"></a><span class="lyseealso"><span>【参】</span><span>臧文仲确实有迷信灵物的倾向。《国语·鲁语上》载，有一种叫爰（<span class="lypinyin">yuán</span>）居的巨型海鸟盘桓在鲁国东门外三天不飞走，臧文仲就让<a href="#guoren">国人</a>向它祭祷。这种滥用祀典的行为受到<a href="#liuxiahui">柳下惠</a>有理有据的批评：<span class="lyq">“越哉，臧孙之为政也！夫祀，国之<a href="#dajie">大节</a>也，而节，政之所成也。故慎制祀以为国典。……今海鸟至，己不知而祀之，以为国典，难以为仁且智矣。……今<a href="#zi1">兹</a>海其有灾乎？夫广川之鸟兽，恒知避其灾也。”</span>（国典：国家的典章制度。）臧文仲听到后承认：<span class="lyq">“<a href="#xin4a">信</a>吾过也！季子之言，不可不法也。”使书以为三策。</span>（策：记大事用的<a href="#jiandu">竹简</a>。）</span></span></p></li>
 </ul></div>
 </div>
@@ -6505,7 +6505,7 @@ img.characterimg {
 <p><a id="mengshi"></a><span class="lycharname">孟氏</span>，<span class="lycharname">孟</span>：即孟孙氏，鲁国<a href="#sanhuan">三桓</a>之一，是鲁桓公庶长子庆父的后代，已知的最后一代宗主是第11代的<a href="#mengjingzi">孟敬子</a>。据说孟子也是庆父的后代，但和孟孙氏不同<a href="#zongzhu">族</a>。 <a href="#18.3" class="lyref">18.3</a> <a href="#19.19" class="lyref">19.19</a> </p>
 <p><a id="mengwubo"></a><span class="lycharname">孟武伯</span>：名彘（<span class="lypinyin">zhì</span>），谥号是武，<a href="#mengyizi">孟懿子</a>长子，<a href="#mengshi">孟孙氏</a>第10代宗主。<a href="#aigong">鲁哀公</a>在位的最后一年（前468年），出游时遇见孟武伯，哀公<span class="lyq">曰：“请有问于子：余及死乎？”对曰：“臣无由知之。”三问，卒辞不对。</span>（及死：善终，寿终。）哀公被迫要对<a href="#sanhuan">三桓</a>动手了。事见《左传·哀公二十七年》。 <a href="#2.6" class="lyref">2.6</a> <a href="#5.8" class="lyref">5.8</a> </p>
 <p><a id="qihuangong"></a><span class="lycharname">齐桓公</span>，<span class="lycharname">桓公</span>（？—前643年）：名小白，齐僖公三子，齐国第15任国君，春秋五<a href="#badao">霸</a>之首（“辟土服远曰桓”）。他在位43年，信任<a href="#guanzhong">管仲</a>主政，力行改革，国力大盛，尊王攘<a href="#yidihuaxia">夷</a>，<a href="#jiuhezhuhou">九合诸侯</a>，成为“霸主”的典范。事见《史记·齐太公世家》。 <a href="#14.15" class="lyref">14.15</a> <a href="#14.16" class="lyref">14.16</a> <a href="#14.17" class="lyref">14.17</a> </p>
-<p><a id="qijinggong"></a><span class="lycharname">齐景公</span>（前547年—前490年在位）：名杵臼，齐国第23任国君，<a href="#cuizhu">齐庄公</a>的异母弟，在位之久为齐国之最。他<span class="lyq">好治宫室、聚狗马，奢侈，厚赋重刑</span>，幸好内有贤相<a href="#yanpingzhong">晏婴</a>，外有良将司马穰苴（<span class="lypinyin">ráng jū</span>），任内局势基本稳定。但早在景公九年，晏婴就察觉到衰败的端倪，认为<span class="lyq">齐政卒归<a href="#chenchengzi">田氏</a>：田氏虽无大德，以公权私，有德于民，民爱之。</span>事见《史记·齐太公世家》。《晏子春秋》记载了大量“景公如何如何，晏子谏/讽/对”的故事。 <a href="#12.11" class="lyref">12.11</a> <a href="#16.12" class="lyref">16.12</a> <a href="#18.3" class="lyref">18.3</a> </p>
+<p><a id="qijinggong"></a><span class="lycharname">齐景公</span>（前547年—前490年在位）：名杵臼，齐国第23任国君，<a href="#cuizhu">齐庄公</a>的异母弟，在位之久为齐国之最。他好饮酒、<span class="lyq">治宫室、聚狗马，奢侈，厚赋重刑</span>，幸好内有贤相<a href="#yanpingzhong">晏婴</a>，外有良将司马穰苴（<span class="lypinyin">ráng jū</span>），任内局势基本稳定。但早在景公九年，晏婴就察觉到衰败的端倪，认为<span class="lyq">齐政卒归<a href="#chenchengzi">田氏</a>：田氏虽无大德，以公权私，有德于民，民爱之。</span>事见《史记·齐太公世家》。《晏子春秋》记载了大量“景公如何如何，晏子谏/讽/对”的故事。 <a href="#12.11" class="lyref">12.11</a> <a href="#16.12" class="lyref">16.12</a> <a href="#18.3" class="lyref">18.3</a> </p>
 <p><a id="quboyu"></a><span class="lycharname">蘧（<span class="lypinyin">qú</span>）伯玉</span>：蘧瑗（<span class="lypinyin">yuàn</span>），字伯玉，卫国贤大夫，谥号是成（“安民立政曰成”）。他应比孔子年长10岁以上，孔子在卫国时，曾借住在他家。西汉刘安《淮南子·原道训》说：<span class="lyq">蘧伯玉年五十而有四十九年非。何者？先者难为知，而后者易为攻也。</span>（攻：指借鉴经验以克服困难，相当于现代说的后发优势。）可见他是个不断追求进步的人。据《孔子家语·弟子行》，孔子评价他<span class="lyq">外宽而内正，自极于隐括之中，直己而不直人，汲汲于仁，以善自终。</span>（隐括：矫正曲斜的工具，隐是矫曲为直，括是矫斜为方，引申为标准规范，构词与<a href="#leixie">缧绁</a>相同。汲汲：急切追求的样子。） <a href="#14.25" class="lyref">14.25</a> <a href="#15.7" class="lyref">15.7</a> </p>
 <p><a id="shusunwushu"></a><span class="lycharname">叔孙武叔</span>：鲁国<a href="#sanhuan">三桓</a>之一叔孙氏的第8代宗主，名州仇，谥号是武，曾任鲁国<a href="#huantui">司马</a>。叔孙氏的封邑是郈（<span class="lypinyin">hòu</span>）邑，在今山东省泰安市东平县，位于<a href="#wenshui">汶水</a>北岸，齐鲁交界处。 <a href="#19.23" class="lyref">19.23</a> <a href="#19.24" class="lyref">19.24</a> </p>
 <p><a id="shun"></a><span class="lycharname">舜</span>（约前2200年前后）：有虞氏，名重华，又称虞舜，上古传说中<a href="#wudi">五帝</a>的第5位，是五帝第2位颛顼的6世孙。他20岁即以孝谨闻名（成为《二十四孝》第1个故事“孝感动天”的主角），30岁被举荐给<a href="#yao">尧帝</a>。尧帝把两个女儿娥皇、女英嫁给他，让9个儿子同他共事。经过长期的考察锻炼，舜在50岁时摄天子政，61岁登帝位，22年后退居二线，授权给治水有功的<a href="#yu">禹</a>，又17年后去世。舜帝<a href="#wuweierzhi">举贤任能</a>，布教四方，厚德远佞，建立了井井有条的清平世界。 <a href="#6.30" class="lyref">6.30</a> <a href="#8.18" class="lyref">8.18</a> <a href="#8.20" class="lyref">8.20</a> <a href="#12.22" class="lyref">12.22</a> <a href="#14.42" class="lyref">14.42</a> <a href="#15.5" class="lyref">15.5</a> <a href="#20.1" class="lyref">20.1</a> </p>
@@ -6752,6 +6752,8 @@ img.characterimg {
 <p><a id="laozizhuyi"></a><span class="lybook">《老子注译》</span>，高亨著，华钟彦校，河南人民出版社，1980年。《老子》版本繁多，文字、断句屡有分歧，难辨原委，本书引文均据此本。</p>
 <p><span class="lybook">《庄子》</span>，方勇译注，中华书局，中华经典名著全本全注全译丛书，2010年。</p>
 <p><span class="lybook">《管子通解》</span>，赵守正撰，北京经济学院出版社，1989年。</p>
+<p><span class="lybook">《晏子春秋译注》</span>，孙彦林、周民、苗若素译注，齐鲁书社，1991年。</p>
+<p><span class="lybook">《晏子春秋校注》</span>，张纯一撰，梁运华点校，中华书局，中华国学文库，2017年。</p>
 <p><span class="lybook">《商君书·韩非子》</span>，张觉点校，岳麓书社，古典名著普及文库，2006年。附录含《申子》、《慎子》。</p>
 <p><span class="lybook">《吕氏春秋·淮南子》</span>，杨坚点校，岳麓书社，古典名著普及文库，2006年。</p>
 <p><span class="lybook">《韩非子校注》</span>（修订本），《韩非子》校注组编写，周勋初修订，凤凰出版社，2009年。</p>
