--- a/ly.html
+++ b/ly.html
@@ -3,7 +3,7 @@ layout: empty
 permalink: /ly
 ---
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
+<!DOCTYPE html>
 <html lang="zh-Hans">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
