Remove type="text/css" according to validator.w3.org.

--- a/aboly.html
+++ b/aboly.html
@@ -11,7 +11,7 @@ permalink: /aboly
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>一瓶论语</title>
 <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<style type="text/css">
+<style>
 body {
     font-family: Helvetica, sans-serif;
     padding-top: 50px;
